# gendiff

./: Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
gen_diff/: generate_diff.py  parsers.py
gen_diff/scripts/: cli.py
tests/: test_generate_diff.py
tests/fixtures/: flat_json_result
